Fixed bug with running under java 11